additional update to tail

--- a/tail.ipynb
+++ b/tail.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
     "        return list()\n",
     "    if revidx > len(inseq): # solve for case when requested index is larger than whole sequence\n",
     "        return inseq\n",
-    "    return inseq[len(inseq) - revidx:]"
+    "    return inseq[-revidx:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "['l', 'o']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "[]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,12 +169,12 @@
     "\n",
     "    if revidx > len(inseq): # solve for case when requested index is larger than whole sequence\n",
     "        return inseq\n",
-    "    return inseq[len(inseq) - revidx:]"
+    "    return inseq[-revidx:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "[49, 64, 81]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,6 +294,130 @@
    ],
    "source": [
     "tail(nums, 1)   #, [])  # n=1 with a now empty generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail([1, 2, 3, 4, 5], 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['l', 'o']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail('hello', 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import types\n",
+    "from collections import deque\n",
+    "\n",
+    "def tail(inseq, revidx):\n",
+    "    if revidx <= 0:         # solve for case when requested index is 0 or negative\n",
+    "        return list()\n",
+    "    \n",
+    "    if isinstance(inseq, types.GeneratorType) == True:  # check if generator\n",
+    "        return list(deque(inseq, maxlen=revidx))        # ONE LINE, PASSING DEQUE THE ENTIRE ITERABLE!! WOW!\n",
+    "    ## assume that the inseq is not a generatorre: toe\n",
+    "    inseq = list(inseq)     # convert tuples to list, str to broken out list\n",
+    "\n",
+    "    if revidx > len(inseq): # solve for case when requested index is larger than whole sequence\n",
+    "        return inseq\n",
+    "    return inseq[-revidx:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[49, 64, 81]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squares = (n**2 for n in range(10))\n",
+    "tail(squares, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail([1, 2, 3, 4, 5], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail('hello', 3)"
    ]
   }
  ],
